# webscrapers

./: api.py  pyproject.toml  requirements.txt
templates/: index.html
